--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Cloudflare worker ",
   "main": "index.js",
   "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler publish",
     "format": "prettier --write ."
   },
   "repository": {
