--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ main = "index.js"
 # usage_model = "unbound"
 compatibility_date = "2022-06-21"
 
-# [[kv_namespaces]]
-#   binding = "KV_API"
-#   id = "85d80461985146a4a96bfd2f9e87f209"
-#   preview_id = "685da737624c4d49bb7fafccae2bccb7"
+[[kv_namespaces]]
+  binding = "KV_API"
+  id = "85d80461985146a4a96bfd2f9e87f209"
+  preview_id = "685da737624c4d49bb7fafccae2bccb7"
